# Cli_chatbot

./: .gitignore  README.md  agent.py  agent_demo.py  brains.py  goldfish.py  json_demo.py  lg_chat.py  lg_hello.py  main.py  mcp_explore.py  mcp_tools.py  memory.py  pyproject.toml  rag_hello.py  tool_demo.py  tool_demo_local.py  tools.py
rag/: rag_file.py
